# gpui-template

./: Cargo.toml  cargo-generate.toml
src/: main.rs
wix/: main.wxs
