[package]
name = "{{project-name}}"
description = "A GPUI application"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
dark-light = "2.0.0"

# For cargo-bundler
[package.metadata.bundle]
name = "{{project-name}}"
identifier = "com.{{project-name}}.app"
# Paths to your icons (provide icons for different platforms)
# Example path: "assets/icon32x32.png"
icon = []
resources = []